--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -7,16 +7,7 @@
 </head>
 
 <body>
-    <nav class="nav">
-        <div class="nav-logo">
-            <a class="nav-logo-link" href="#"><b>SteerJobs</b></a>
-        </div>
-        <div class="nav-container-link">
-            <a class="nav-link" href="/about">ABOUT</a>
-            <a class="nav-link" href="/login">{{signinAndProfile}}</a><!--SIGN-IN-->
-            <a class="nav-link-signup" href="/signup">{{signupAndSignout}}</a><!--Sign-Up-->
-        </div>
-    </nav>
+    {{>nav}}
     <header class="head">
         <div class="head-text">
             <h1 class="head1">WELCOME TO A NEW PROFESSIONAL COMMUNITY</h1>
