--- a/templates/profile.hbs
+++ b/templates/profile.hbs
@@ -1,12 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <title>{{userId}}</title>
+    <script src="https://kit.fontawesome.com/b8afffe50a.js" crossorigin="anonymous"></script>
+    <title>Profile page</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <style>
+        i {
+            font-size: 20px;
+            color: black;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>You are in Profile Page</h1>
-    <h1>{{userId}}</h1>
-    <h1>{{name}}</h1>
-    <h1>{{email}}</h1>
+    {{>nav}}
+    <main class="container-main">
+        <div class="sidebar">
+            <h5>EXPLORE</h5>
+            <ul>
+                <li><a href="/home"><i class="fas fa-home"></i> <span class="icon-name">HOME</span></a></li>
+                <li><a href="/feed"><i class="far fa-newspaper"></i> <span class="icon-name"> FEED</span></a></li>
+                <li><a href="/connections"><i class="fas fa-users"></i> <span class="icon-name"> CONNECTIONS</span></a></li>
+                <li><a href="/notification"><i class="fas fa-bell"></i><span class="icon-name"> NOTIFICATION </span></a></li>
+                <li><a href="/bookmarks"><i class="fas fa-bookmark"></i> <span class="icon-name">FAVORITE </span></a></li>
+                <li><a href="/help"><i class="fas fa-hands-helping"></i> <span class="icon-name"> HELP </span></a></li>
+            </ul>
+        </div>
+
+        <div class="container">
+            <div class="container-left">
+                <div class="profile-and-name">
+                    <div class="container-left-picture">
+                        <div class="profile-image">
+                            <img src="/assets/image/profile.svg" alt="Sorry, your picture can't be loaded">
+                        </div>
+                    </div>
+                    <div class="container-left-heading">
+                        <h2>
+                            {{userName}}
+                        </h2>
+                    </div>
+                </div>
+                <div class="container-left-text">
+                    <h3 class="container-left-head">
+                        personal information
+                        <i class="fas fa-users"></i>
+                    </h3>
+                    <div class="content-info">
+                        <div class="info-icon">
+                            <i class="fas fa-envelope"></i>
+                        </div>
+                        <div class="info-data">
+                            <div class="info-name">
+                                <span>{{userEmail}}</span>
+                            </div>
+                            <div class="info-title">
+                                <span>Email</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content-info">
+                        <div class="info-icon">
+                            <i class="fas fa-phone-alt"></i>
+                        </div>
+                        <div class="info-data">
+                            <div class="info-name">
+                                <span>{{userPhone}}</span>
+                            </div>
+                            <div class="info-title">
+                                <span>Phone</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content-info">
+                        <div class="info-icon">
+                            <i class="fas fa-birthday-cake"></i>
+                        </div>
+                        <div class="info-data">
+                            <div class="info-name">
+                                <span>{{userDOB}}</span>
+                            </div>
+                            <div class="info-title">
+                                <span>Date of Birth</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content-info">
+                        <div class="info-icon">
+                            <i class="fas fa-male"></i>
+                        </div>
+                        <div class="info-data">
+                            <div class="info-name">
+                                <span>{{userGender}}</span>
+                            </div>
+                            <div class="info-title">
+                                <span>Gender</span>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="container-right">
+                <div class="container-right-text">
+                    <h3 class="container-right-head">
+                        Education information
+                        <i class="fas fa-book-open"></i>
+                    </h3>
+                    <div class="content-info">
+                        <div class="info-icon">
+                            <i class="fas fa-graduation-cap"></i>
+                        </div>
+                        <div class="info-data">
+                            <div class="info-name">
+                                <span>{{userEducation}}</span>
+                            </div>
+                            <div class="info-title">
+                                <span>Current Education</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content-info">
+                        <div class="info-icon">
+                            <i class="fas fa-university"></i>
+                        </div>
+                        <div class="info-data">
+                            <div class="info-name">
+                                <span>{{userInstitution}}</span>
+                            </div>
+                            <div class="info-title">
+                                <span>Institution</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content-info">
+                        <div class="info-icon">
+                            <i class="fas fa-trophy"></i>
+                        </div>
+                        <div class="info-data">
+                            <div class="info-name">
+                                <span>{{userSkills}}</span>
+                            </div>
+                            <div class="info-title">
+                                <span>Skill</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-right-text">
+                    <h3 class="container-right-head">
+                        Other information
+                        <i class="fas fa-info-circle"></i>
+                    </h3>
+                    <div class="content-info">
+                        <div class="info-icon">
+                            <i class="fas fa-address-card"></i>
+                        </div>
+                        <div class="info-data">
+                            <div class="info-name">
+                                <span>{{userAddress}}</span>
+                            </div>
+                            <div class="info-title">
+                                <span>Address</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content-info">
+                        <div class="info-icon">
+                            <i class="fas fa-globe"></i>
+                        </div>
+                        <div class="info-data">
+                            <div class="info-name">
+                                <span>{{userCountry}}</span>
+                            </div>
+                            <div class="info-title">
+                                <span>Country</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content-info">
+                        <div class="info-icon">
+                            <i class="fas fa-pen"></i>
+                        </div>
+                        <div class="info-data">
+                            <div class="info-name">
+                                <span>{{userBio}}</span>
+                            </div>
+                            <div class="info-title">
+                                <span>Bio</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
