--- a/templates/database.hbs
+++ b/templates/database.hbs
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    {{>nav}}
     <form method="POST" action="/new/database">
         {{Result}}
         <textarea name="query" cols="30" rows="10"></textarea>
