--- a/templates/feed.hbs
+++ b/templates/feed.hbs
@@ -8,16 +8,7 @@
 </head>
 
 <body>
-    <nav class="nav">
-        <div class="nav-logo">
-            <a class="nav-logo-link" href="/home"><b>SteerJobs</b></a>
-        </div>
-        <div class="nav-container-link">
-            <a class="nav-link" href="/about">ABOUT</a>
-            <a class="nav-link" href="/login">{{signinAndProfile}}</a><!--SIGN-IN-->
-            <a class="nav-link-signup" href="/signup">{{signupAndSignout}}</a><!--Sign-Up-->
-        </div>
-    </nav>
+    {{>nav}}
     <main class="feed-main-container">
         <aside class="feed-left-container">
             <div class="card-profile">
