--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -1,10 +1,10 @@
 <nav class="nav">
-        <div class="nav-logo">
-            <a class="nav-logo-link" href="#"><b>SteerJobs</b></a>
-        </div>
-        <div class="nav-container-link">
-            <a class="nav-link" href="/about">ABOUT</a>
-            <a class="nav-link" href="/login">SIGN-IN</a>
-            <a class="nav-link-signup" href="/signup">Sign-Up</a>
-        </div>
-    </nav>
+    <div class="nav-logo">
+        <a class="nav-logo-link" href="/home"><b>SteerJobs</b></a>
+    </div>
+    <div class="nav-container-link">
+        <a class="nav-link" href="/about">ABOUT</a>
+        <a class="nav-link" href={{linkSigninAndProfile}}>{{signinAndProfile}}</a><!--SIGN-IN-->
+        <a class="nav-link-signup" href={{linkSignupAndSignout}}>{{signupAndSignout}}</a><!--Sign-Up-->
+    </div>
+</nav>
