--- a/templates/signup.hbs
+++ b/templates/signup.hbs
@@ -19,16 +19,7 @@
 </style>
 
 <body>
-    <nav class="nav">
-        <div class="nav-logo">
-            <a class="nav-logo-link" href="/home"><b>SteerJobs</b></a>
-        </div>
-        <div class="nav-container-link">
-            <a class="nav-link" href="/about">ABOUT</a>
-            <a class="nav-link" href="/login">{{signinAndProfile}}</a><!--SIGN-IN-->
-            <a class="nav-link-signup" href="/signup">{{signupAndSignout}}</a><!--Sign-Up-->
-        </div>
-    </nav>
+    {{>nav}}
     <section class="section">
         <div class="container">
             <div class="content-img">
