--- a/templates/about.hbs
+++ b/templates/about.hbs
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <title>About</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <title>About Us</title>
 </head>
+
 <body>
     {{>nav}}
-    <h1>Welcome to about page!.....</h1>
+    <section class="about-lower">
+        <div class="about-section">
+            <div class="inner-container">
+                <h1>"HERE EVERYONE FINDS A PERFECT JOB"</h1>
+                <h2>All about STEERJOBS</h2>
+                <p class="text">SteerJobs is the latest platform which is going to help every member of the global
+                    workforce. </p>
+                <p class="text">We hope that in future SteerJobs will lead a diversified business with revenues from
+                    membership subscriptions, advertising sales and recruitment solutions</p>
+                <div class=Miss-Viss>
+                    <h4>VISION</h4>
+                    <p class="text">Provide the best opportunity in the working field to every person of this globe.</p>
+                    <h4>MISSION</h4>
+                    <p class="text">To connect the entire Workforce og this planet and make them best in their field. </p>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+
+
 </body>
+
 </html>
