--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -11,7 +11,7 @@
     <header class="head">
         <div class="head-text">
             <h1 class="head1">WELCOME TO A NEW PROFESSIONAL COMMUNITY</h1>
-            <a class="head-button" href="#"><span class="head-text-link-text">Search for a job</span> <span class="head-text-link-symb">></span> </a>
+            <a class="head-button" href="/jobs/job-search"><span class="head-text-link-text">Search for a job</span> <span class="head-text-link-symb">></span> </a>
             <a class="head-button" href="#"><span class="head-text-link-text">Find a person you know</span> <span class="head-text-link-symb">></span></a>
         </div>
         <div class="head-img">
@@ -27,16 +27,16 @@
                 <h3 id="job3">SUGGESTED SEARCHES</h3>
             </div>
             <div class="job-content-link">
-                <a href="#">Engineering</a>
-                <a href="#">Business Development</a>
-                <a href="#">Finance</a>
-                <a href="#">Administrative Assistant</a>
-                <a href="#">Retail Associate</a>
-                <a href="#">Customer Service</a>
-                <a href="#">Operation</a>
-                <a href="#">Information Technology</a>
-                <a href="#">Marketing </a>
-                <a href="#">Human Resources</a>
+                <a href="/jobs/job-search">Engineering</a>
+                <a href="/jobs/job-search">Business Development</a>
+                <a href="/jobs/job-search">Finance</a>
+                <a href="/jobs/job-search">Administrative Assistant</a>
+                <a href="/jobs/job-search">Retail Associate</a>
+                <a href="/jobs/job-search">Customer Service</a>
+                <a href="/jobs/job-search">Operation</a>
+                <a href="/jobs/job-search">Information Technology</a>
+                <a href="/jobs/job-search">Marketing </a>
+                <a href="/jobs/job-search">Human Resources</a>
             </div>
         </div>
     </section>
